  21 June 2017
Added a built-in map function. Usage: map$(<fnc>.<space separated list>)

  19 May 2017
More 'localisation' of source code to English

  10 May 2017
'localised' source code to English, so you no longer need some knowledge of
Dutch and Danish to understand the code.
Moved two declarations to start of block (this is still C!)

   7 February 2017
Added LT4DH/2016 paper. Updated README.md.

  22 December 2016 - Version 6.209
Uses UnicodeData.txt 16-May-2016 19:23
Removed change log from bracmat.c

   5 October 2016
Fixed error that made sim$(abbcd.abcd) equal to 10/9 instead of 8/9

  23 September 2016
json.c: fixed reading strings with characters with 8th bit set. 

  31 August 2016
Made the FENCE flag ` the first flag to be printed.

   5 August 2016
fpo -> global_fpo in myputc

   12 July 2016
lst: Only list variable on top of stack if RAW option set.

   6 May 2016
lst$ function takes the name of an expression or the expression itself, as the
rhs of an = operator. This is in line with the rest of Bracmat. Usefull when
listing code bound to a variable that has namesakes on the stack. (Before, you
had to assign the variable's value to global variable and list that global
variable instead.)

   3 May 2016
New option RAW for lst function. A RAW listing does not have (varname= at the
beginning and ); at the end. This can be used to store a data structure that,
when read, can be assigned to a variable of the programmer's own choice.
One has to take care when listing a variable that shadows another variable of
the same name. Both variables will be listed!

  20 April 2016
Bug: jsn$-1/2 jsn$-1/25 returned deformed strings. (Only if denominator is 
multiple of 2 and/or 5).

  12 April 2016
Bug: (.B+C)+(.2*(U+Z))+(.A*E)+(.B+C) did not evaluate to an expression where
the (.B+C) terms were combined. vgl() function was the culprit.

   7 April 2016
Made %zu %lu if _WIN32 defined (not __WIN32__).

   1 March 2016